<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/about"
        android:key="about">

        <Preference
            android:title="@string/rate_illumina"
            android:summary="@string/rate_illumina_summary">
            <intent
                android:targetPackage="de.medienDresden.illumina"
                android:targetClass="de.medienDresden.illumina.IlluminaPreferenceActivity"
                android:action="de.medienDresden.illumina.ACTION_RATE" />
        </Preference>

        <Preference
            android:title="@string/licenses"
            android:summary="@string/licenses_summary">
            <intent
                android:targetPackage="de.medienDresden.illumina"
                android:targetClass="de.medienDresden.illumina.IlluminaPreferenceActivity"
                android:action="de.medienDresden.illumina.ACTION_LICENSES" />
        </Preference>

    </PreferenceCategory>

</PreferenceScreen>